fixed overflow issue on addresses page due to select component input width

--- a/src/components/form-components/select/combobox/styles.module.scss
+++ b/src/components/form-components/select/combobox/styles.module.scss
@@ -21,6 +21,7 @@
   top: 0;
   left: 0;
   cursor: default;
+  max-width: 0;
 }
 
 .combobox {
